Update release to 4.5.1